# gptgen

./: .gitignore  CMakeLists.txt  ChangeLog  LICENSE  Makefile  Makefile.win  README  README.md  gptgen.cbp  gptgen.cpp  gptgen.dev  readme.txt  test.sh
